--- a/app/assets/style/_media.scss
+++ b/app/assets/style/_media.scss
@@ -7,9 +7,13 @@ mobile_s   -> max-width: 320px
 ----------------------------*/
 
 @include pad {
+    h1,
+    .fz-h1 {
+        font-size: $font-h2; //32px
+    }
     h2,
     .fz-h2 {
-        font-size: 28px; 
+        font-size: 28px;
     }
     h4,
     .fz-h4 {
@@ -60,8 +64,8 @@ mobile_s   -> max-width: 320px
     }
 }
 
-@include desktop{
-     // planDescripition
+@include desktop {
+    // planDescripition
     .choice {
         &_num {
             overflow-x: auto;
@@ -199,16 +203,31 @@ mobile_s   -> max-width: 320px
                 margin-top: 24px;
             }
         }
-    }    
+    }
 }
 
-@include mobile_lg{
-    .header{
+@include mobile_lg {
+    .header {
         padding: 0 20px;
-        &_box{
-            .logo{
+        background: #fff;
+        border-bottom: 3px solid $secondary;
+        &_box {
+            .logo {
                 max-width: 130px;
             }
+        }
+    }
+
+    .planBanner {
+        &_img {
+            width: 100%;
+            height: 495px;
+            background: url(https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/banner_sm.svg) no-repeat
+                center center;
+            top: 50px;
+        }
+        &_info {
+            margin: 50px 0;
         }
     }
 
@@ -221,6 +240,19 @@ mobile_s   -> max-width: 320px
     .start {
         .d_flex {
             padding: 300px 20px 50px;
+        }
+    }
+
+    .choice{
+        .planDeta_item{
+            .planDeta_info {
+                padding: 0 16px;
+            }
+            .NumBox{
+                &_item {
+                    padding: 24px 16px;
+                }
+            }
         }
     }
 }
