--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -242,7 +242,7 @@
             margin: 50px 0 20px;
             background-color: $white;
             box-shadow: 0 2px 10px 0 #00000014;
-            border-radius: 12px 12px 0 0;
+            border-radius: 12px;
             padding: 30px 20px 20px;
             min-width: 352px;
             box-sizing: border-box;
@@ -315,14 +315,12 @@
         }
     }
     &.start_bg {
-        // position: absolute;
         width: 100%;
         height: 503px;
         background: url(https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/home_footer.svg) no-repeat
             center center;
         background-size: cover;
         top: 0;
-        // z-index: -2;
     }
 }
 
