--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -1101,7 +1101,7 @@ html[xmlns] .flexslider .slides {
 }
 
 .evaluate_list {
-  max-width: 1100px;
+  max-width: 1088px;
   padding-top: 48px;
 }
 
@@ -1113,19 +1113,15 @@ html[xmlns] .flexslider .slides {
 
 .evaluate_list .evaluate_card {
   position: relative;
-  margin: 50px 0 20px;
+  margin: 50px 10px 20px !important;
   background-color: #fff;
   -webkit-box-shadow: 0 2px 10px 0 #00000014;
           box-shadow: 0 2px 10px 0 #00000014;
   border-radius: 12px;
   padding: 30px 20px 20px;
-  min-width: 352px;
+  width: calc( ( 1088px - 56px ) / 3) !important;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-.evaluate_list .evaluate_card:first-child {
-  margin-left: 5px;
 }
 
 .evaluate_list .evaluate_img {
