--- a/app/assets/style/_media.scss
+++ b/app/assets/style/_media.scss
@@ -7,23 +7,22 @@ mobile_s   -> max-width: 320px
 ----------------------------*/
 
 @include pad {
-    h1,
     .fz-h1 {
         font-size: $font-h2; //32px
     }
-    h2,
+
     .fz-h2 {
         font-size: 28px;
     }
-    h4,
+
     .fz-h4 {
         font-size: $font-h5; //18px
     }
-    h5,
+
     .fz-h5 {
         font-size: $font-size-base; //16px
     }
-    h6,
+
     .fz-h6 {
         font-size: $font-h7; //12px
         line-height: 18px;
@@ -66,7 +65,7 @@ mobile_s   -> max-width: 320px
 }
 
 @include desktop {
-    .introduce{
+    .introduce {
         &_list {
             width: 70%;
         }
@@ -223,13 +222,13 @@ mobile_s   -> max-width: 320px
 }
 
 @include mobile_lg {
-
     .planBanner {
         &_img {
             width: 100%;
             height: 495px;
             background: url(https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/banner_sm.svg) no-repeat
                 center center;
+            background-size: cover;
             top: 50px;
         }
         &_info {
@@ -249,13 +248,12 @@ mobile_s   -> max-width: 320px
     .start {
         .d_flex {
             padding: 300px 20px 50px;
-            .c_btn{
+            .c_btn {
                 margin-top: 20px;
             }
         }
         &.start_bg {
-            background: url(../images/star_bg_mobile.png) no-repeat
-                center center;
+            background: url(../images/star_bg_mobile.png) no-repeat center center;
             height: 461px;
             background-size: cover;
         }
